crates/rulesteward-fapolicyd/tests/snapshots/fapd-W06__exe-absent.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-W06] sev=Warning line=3 col=1 span=168..215 :: `exe=/nonexistent/rs-trap/absent-exe` is in neither the trust DB nor present on disk
